testsuite/tests/parser/should_compile/p010.alan
sign() : proc
  foo : int;
{
  foo = +3;
  foo = -foo;
}
