testsuite/tests/parser/should_fail/pfail025.alan
hello() : proc
  foo : int;
{
  while(true
      foo =4;
  foo = 3;
}
